// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoList component should render 1`] = `
<ul
  className="info-list"
>
  <li>
    <div
      className="decorated-list-item"
    >
      <div
        className="decorated-list-item__title"
      >
        <h5
          className="bold"
        >
          Item 1
        </h5>
      </div>
      <div
        className="decorated-list-item__content"
      >
        <div>
          Some content
        </div>
      </div>
    </div>
  </li>
  <li>
    <div
      className="decorated-list-item"
    >
      <div
        className="decorated-list-item__title"
      >
        <h5
          className="bold"
        >
          Another item
        </h5>
      </div>
      <div
        className="decorated-list-item__content"
      >
        <div>
          Some more content
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`InfoList component should render compact 1`] = `
<ul
  className="info-list"
>
  <li>
    <div
      className="decorated-list-item decorated-list-item--compact"
    >
      <div
        className="decorated-list-item__title"
      >
        <h5
          className="bold"
        >
          Item 1
        </h5>
      </div>
      <div
        className="decorated-list-item__content"
      >
        <div>
          Some content
        </div>
      </div>
    </div>
  </li>
  <li>
    <div
      className="decorated-list-item decorated-list-item--compact"
    >
      <div
        className="decorated-list-item__title"
      >
        <h5
          className="bold"
        >
          Another item
        </h5>
      </div>
      <div
        className="decorated-list-item__content"
      >
        <div>
          Some more content
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`InfoList component should render without in 2 columns 1`] = `
<ul
  className="info-list info-list--columns"
>
  <li>
    <div
      className="decorated-list-item"
    >
      <div
        className="decorated-list-item__title"
      >
        <h5
          className="bold"
        >
          Item 1
        </h5>
      </div>
      <div
        className="decorated-list-item__content"
      >
        <div>
          Some content
        </div>
      </div>
    </div>
  </li>
  <li>
    <div
      className="decorated-list-item"
    >
      <div
        className="decorated-list-item__title"
      >
        <h5
          className="bold"
        >
          Another item
        </h5>
      </div>
      <div
        className="decorated-list-item__content"
      >
        <div>
          Some more content
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`InfoList component should render without titles 1`] = `
<ul
  className="info-list"
>
  <li>
    <div
      className="decorated-list-item decorated-list-item--no-title"
    >
      <div
        className="decorated-list-item__title"
      >
        <h5
          className="bold"
        >
          Item 1
        </h5>
      </div>
      <div
        className="decorated-list-item__content"
      >
        <div>
          Some content
        </div>
      </div>
    </div>
  </li>
  <li>
    <div
      className="decorated-list-item decorated-list-item--no-title"
    >
      <div
        className="decorated-list-item__title"
      >
        <h5
          className="bold"
        >
          Another item
        </h5>
      </div>
      <div
        className="decorated-list-item__content"
      >
        <div>
          Some more content
        </div>
      </div>
    </div>
  </li>
</ul>
`;
